--- a/docs/bugs/NET-005.md
+++ b/docs/bugs/NET-005.md
@@ -5,7 +5,7 @@
 | **Product** | DataFlow.Net |
 | **Component** | ObjectMaterializer |
 | **Severity** | 🟢 Low |
-| **Status** | 🔴 Open |
+| **Status** | 🔴 Fixed in v1.2.1 |
 | **Found** | 2026-02-07 |
 
 ## Description
